# FlashSender

./: README.md  package.json  start.bat
.github/workflows/: filedrop-ios.yml
FileDrop/: FileDrop.entitlements  README.md
FileDrop/.github/workflows/: build.yml
FileDrop/FileDrop/: Info.plist
FileDrop/FileDrop.xcodeproj/: project.pbxproj
FileDrop/FileDrop.xcodeproj/xcshareddata/xcschemes/: FileDrop.xcscheme
FileDrop/FileDrop/App/: AppDelegate.swift  FileDropApp.swift
FileDrop/FileDrop/Assets.xcassets/AccentColor.colorset/: Contents.json
FileDrop/FileDrop/Assets.xcassets/AppIcon.appiconset/: Contents.json
FileDrop/FileDrop/Models/: TransferRecord.swift
FileDrop/FileDrop/Services/: FileTransferService.swift  MDNSDiscoveryService.swift  NotificationService.swift  WebSocketService.swift
FileDrop/FileDrop/Views/: HomeView.swift  ReceiveView.swift  SendView.swift  TransferProgressView.swift
FileDrop/scripts/: generate-app-icons.ps1
server/: Cargo.toml
server/src/: main.rs
