[package]
name = "filedrop-server"
version = "0.1.0"
edition = "2021"
description = "WebSocket file transfer server for Windows (Wi-Fi + USB)"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
mdns-sd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
notify = "7"
tungstenite = "0.26"
